작은 것들의 변화. - 프래그먼트 추가, 아이콘 이미지 변경, 아이콘 배치 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Starmuri</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_option">Options</string>
+    <string name="title_group">Group</string>
+    <string name="title_counter">Counter</string>
 </resources>
