큰 것들 추가. (앱실행시 보이는 변화는 없음.) - 파이어베이스와 안드로이드 연동 및 데이터베이스 생성 완료. 아직 뭐 한거는 없음 (https://console.firebase.google.com/u/0/project/stargroup-appproject/overview?hl=ko) ps 소유자 추가해야하는데 구글 이메일좀 가르쳐주라 - 카카오톡 디벨로터스에 프로젝트 등록 했음. 있음 좋을거같아서 했는데 별로면 브랜치 머지하지말자. - 카카오와 프로젝트를 연동시키는 것 까지는 했음. "카카오톡으로 로그인"은 아직 구현 못함. ps 2 이것도 팀원 추가하게 카카오톡 로그인 이메일도 가르쳐주라 ㅋㅋㅋ
다음 커밋에 추가할 내용
- 로그인화면. 앱 실행시 로딩화면 -> 메인화면 이였는데 이것보단 로딩화면 -> 로그인화면 -> 메인화면
이순서대로가 나을것같다는 생각이 들어.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_option">Options</string>
     <string name="title_group">Group</string>
     <string name="title_counter">Counter</string>
+    <string name="kakao_app_key">715c903bb37807c1b1da501718954a4c</string>
 </resources>
