큰 것들 추가. - 파이어베이스와 안드로이드 연동 및 데이터베이스 생성 완료. (https://console.firebase.google.com/u/0/project/stargroup-appproject/overview?hl=ko) ps 소유자 추가해야하는데 구글 이메일좀 가르쳐주라 -폰트 추가 (나눔고딕, 나눔고딕 light, 메이플스토리체 light, 조선일보명조 .ttf) -구글계정으로 로그인 화면 구성 (구성만 되어있음.) 여기 참고했습니다. ↓ https://neosla.tistory.com/26 https://developers.google.com/identity/sign-in/android/sign-in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="title_option">Options</string>
     <string name="title_group">Group</string>
     <string name="title_counter">Counter</string>
-    <string name="kakao_app_key">715c903bb37807c1b1da501718954a4c</string>
+    <string name="join_in_constellation">Join In Constellation</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
+    <string name="server_client_id"></string>
 </resources>
