--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="join_in_constellation">Join In Constellation</string>
     <string name="sign_in_with_google">Sign in With Google</string>
     <string name="server_client_id"></string>
+    <string name="book_title"></string>
+    <string name="book_topic"></string>
 </resources>
