--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">Starmuri</string>
+    <string name="app_name">별무리</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_option">Options</string>
     <string name="title_group">Group</string>
     <string name="title_counter">Counter</string>
+    <string name="join_in_constellation">Join In Constellation</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
+    <!--<string name="server_client_id">394582900859-r1603dh7chm6gvjeheenng4b7j5cmmh5.apps.googleusercontent.com</string>-->
+    <string name="server_client_id">394582900859-01mqtpoe4s4jjvkj55immovpp4rr3gh1.apps.googleusercontent.com</string>
+
 </resources>
